deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-static-site
spec:
  replicas: 5
  selector:
    matchLabels:
      app: simple-static-site-app
  template:
    metadata:
      labels:
        app: simple-static-site-app
    spec:
      containers:
      - name: simple-static-site
        image: durrheimmark/simple-static-site:1.1
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "100Mi"
            cpu: "50m"
        livenessProbe:
          httpGet:
            path: "/health"
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: "/health"
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: simple-static-site-service
spec:
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: simple-static-site-app
